add googledrive backup functionality and core setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# logs
+.log
+
+# secrets
+/secrets
+settings.py
+
+# dev
+TODO.md
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
