--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyDrive==1.3.1
 pyparsing==3.0.9
+python-crontab==2.6.0
+python-dateutil==2.8.2
 PyYAML==6.0
 requests==2.28.1
 rsa==4.9
