--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
+Flask==2.2.2
 google-api-core==2.8.2
 google-api-python-client==2.55.0
 google-auth==2.9.1
@@ -8,6 +10,10 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.3
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 oauth2client==4.1.3
 protobuf==4.21.4
 pyasn1==0.4.8
@@ -22,3 +28,5 @@ rsa==4.9
 six==1.16.0
 uritemplate==4.1.1
 urllib3==1.26.11
+Werkzeug==2.2.2
+zipp==3.8.1
