--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
+flake8==5.0.4
 Flask==2.2.2
+flask-ngrok==0.0.25
+future==0.18.2
 google-api-core==2.8.2
 google-api-python-client==2.55.0
 google-auth==2.9.1
@@ -11,14 +14,18 @@ googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.12.0
+install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 oauth2client==4.1.3
 protobuf==4.21.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.9.1
 PyDrive==1.3.1
+pyflakes==2.5.0
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
